--- a/docUtente/VecchiaPosta.tex
+++ b/docUtente/VecchiaPosta.tex
@@ -29,66 +29,94 @@
 \maketitle
 
 %----------------------------------------------------
+\begin{abstract}
+In questo documento verranno descritti nel dettaglio tutti i requisiti funzionali e non funzionali individuati per la realizzazione del sito web del B\&B La Vecchia Posta.
+Per la realizzazione del nuovo sito web sono state utilizzate le informazioni sul traffico dati utilizzando ``google analytics''. Sono stati presi in visione i siti web di altre strutture
+locali e nazionali per rendere la versione 2.0 del sito del B\&B La Vecchia Posta una versione all'avanguardia utilizzando tutte le nuove tecniche del web 2.0.
+\\
+Nella prima parte di questo documento si riporta una descrizione dell'attività del committente ponendo l'attenzione sui dati statici raccolti.
+\\
+Nella seconda parte vengono descritti in maniera puntuale i requisiti funzionali per la realizzazione del nuovo sito web. Come framework di sviluppo verrà utilizzato ``beContent'' tool 
+sviluppato dall'università dell'Aquila, del quale il sottoscritto è uno sviluppatore.
+\end{abstract}
 
 \chapter{Generalità}
+
 \section{Il Committente}
-Il B\&B La Vecchia Posta, innaugurato nell'Agosto del 2010 è situtato nel comune di Cagnano Amiterno, a pochi chilometri dal centro della città di L'Aquila. Situato in Via Amiternum n 6 è
-stato innaugurato nell'Agosto del 2010 con la volontà e l'idea di far risvegliare dal torpidio il paese natale del committente.
+Il B\&B La Vecchia Posta, inaugurato nell'Agosto del 2010 è situtato in Via Amiternum n 6 nel comune di Cagnano Amiterno, a pochi chilometri dal centro della città di L'Aquila.
 Offre ai suoi clienti 6 spaziose camere tutte con bagno privato, ampio spazio verde di proprietà garantendo ai suoi clienti il massimo confort e relax. 
 Si riporta una veduta aerea dell'area del B\&B per far rendere conto al lettore la posizione geografica e la conformazione dello spazio (fig.\ref{fig:bbArea}). 
 
 \begin{figure}[h!]%
-% 	\includegraphics[width=0.6\textwidth,keepaspectratio=true]{img/bbArea1}
+	\includegraphics[width=0.6\textwidth,keepaspectratio=true]{img/bbArea1}
 	\centering
 	\caption{Veduta area del B\&B La Vecchia Posta}%
 	\label{fig:bbArea}%
 \end{figure}
-L'attività del B\&B è principalmente legata al turismo primaverile/estivo in quanto il paese non offre strutture adeguate per attirare turisti invernali.
-Il B\&B organizza percorsi turistici segnalando le bellezze naturali del posto, è legato al portale ``Tripadvisor'' dal quale ha ricevuto per l'anno 2012 e per l'anno 2013 il tagliando di struttura consigliata dal portale.
-Il committente, che in questo particolare caso risulta essere anche lo sviluppatore dell'applicazione web, è riuscito a stringere collaborazioni con altri portali di promozione del turismo come ``Bed-and-Breakfast.it'', che risulta essere
-il primo portale italiano interamente dedicato al mondo del B\&B. il B\&B risulta essere ad conduzione familiare, è gestito dal sottoscritto e con la collaborazione dei propri genitori, inoltre non ha nessun dipendente.
+Il B\&B è a conduzione familiare, il titolare, l'autore di questo documento, è aiutato dai genitori Emanuela e Nando, incuriositi nel conoscere nuove persone per impoarare usi e costumi di diversi luoghi.
+Dall'analisi dei dati raccolti il sottoscritto si è reso conto che molta della pubblicità programmata su internet, tramite il servizio ``google adword'', non portava ai risultati attesi,
+quindi è sorta la neccessità di aggiornare il sito web attuale.
 
 \section{Situazione attuale}
-Il B\&B La Vecchia Posta risulta essere titolare di un dominio web dall'URL www.vecchiaposta.it, non sono stati previsti alias per il momento. il sito web è stato realizzato nel 2010 dalla Fermenti Grafici, web agency aquilana, che a titolo di amicizia ha realizzato
-il comparto grafico (logo, foto, template) ed ha fornito gratuitamente e momentaneamente l'hosting. 
+Il B\&B La Vecchia Posta risulta essere titolare di un dominio web dall'URL www.vecchiaposta.it, al momento non sono stati previsti alias. 
+\\Il sito web è stato realizzato nel 2010 dalla Fermenti Grafici, web agency aquilana, che a titolo di amicizia ha realizzato
+il comparto grafico (logo, foto, template) ed ha fornito gratuitamente e momentaneamente l'hosting.
 Ad oggi il sito web risulta essere completamente gestito dal sottoscritto ed è hostato dalla web farm ARUBA.
-Sin dalla sua prima versione il sito web del B\&B è stato  realizzato utilizzando WordPress, uno dei più famosi CMS nel mondo del web e sono stati installati alcuni plug-in per fornire al sito alcune funzionalità 
-di cui il committente aveva bisogno. \\
-Il traffico del sito risulta essere monitorato dal servizio di google analytics, che ci ha permesso di analizzare il comportamento dell'utente su ogni singola pagina del sito web. Si riportano degli screenshot che descrivono il comportamento
-dell'utenza sul sito web (fig.\ref{fig:analytics1}).
-
-\begin{figure}[h!]
-   \includegraphics[width=0.8\textwidth,keepaspectratio=true]{img/googleAnalytics1}
-   \centering
-   \caption{Statistiche analytics}%
-   \label{fig:analytics1}%
-\end{figure}
-Da una prima analisi dei dati raccolti dal report di google analytics risulta chiaro che la paginazione della home page risulta non essere in linea con le linee guide sulla progettazione di interfacce utente per applicazioni web.
-Il traffico utente risulta non raggiungere l'obiettivo del sito web che è aumentare le prenotazioni.
+\\Sin dalla sua prima versione il sito web del B\&B è stato realizzato utilizzando WordPress, uno dei più famosi CMS nel mondo del web e sono stati installati alcuni plug-in per fornire al sito alcune funzionalità di cui il committente aveva bisogno.
 
 \subsection{Aspetti rilevanti del sito}
-Dall'analisi di alcuni test utenti effettuati su ospiti del B\&B risulta essere gradita il comporto grafico del sito, ma non è invece intuibile il meccanismo della prenotazione.
+Da interviste effettuate sui clienti del B\&B risulta essere di gradevole impatto il sito, grazie ad una grafica curata minuziosamente.
+sempre ascoltando i parari di terzi il sito web risulta essere di facile navigazione offrendo informazioni dettagliate per le singole pagine.
 \subsection{Principali pregi}
-Gli aspetti di pregio sono significativamente attribuibili all'intero comparto grafico, con scelte professionali per quanto riguarda il logo e l'accostamento di colori. Le foto utilizzate nel sito risultano essere gradevoli e
-notevolmente descrittive della realtà.
+L'intero sito web non ha oggetti in flash, che renderebbero il sito non navigabile dadispositivi mobile.
+La homePage effettua 86 HTTP Request per un peso complessivo di circa 60Kb scaricabili in circa 3 secondi con una connessione a banda larga di velocità media (4Mb)
+La struttura dell'intero sito + sempre coerente fornendo uno spazio per l'immagine principale della pagina, che pèuò anche essere uno slider, e dello spazio binanco per il testo rendendo la lettura gradevole
+non affaticando gli occhi del lettore.
 \subsection{Principali difetti}
-Gli aspetti negativi del sito del B\&B risultano essere legati alla progettazione della disposizione degli elementi nel display, dal fatto che il sito web non è responsive (pecca non attribuibile alla Fermenti Grafici in quanto
-non richiesta inizialmente dal committente). 
-Si nota dallo screenshot seguente (fig. \ref{fig:analytics2}) che gli utenti non ricevono abbastanza informazioni nella parte sopra la piega e quindi non arrivano ad effettuare prenotazioni.
-\begin{figure}[h!]
-  \includegraphics[width=0.9\textwidth,keepaspectratio=true]{img/googleAnalytics2}
-   \centering
-   \caption{Percentuali di click sulla home page}%
-   \label{fig:analytics2}%
-\end{figure}
-Dai dati raccolti risulta che solamente un 6\% effettua click alla voce del menu ``Prenota'' e mentre meno del 1\% arriva a visionare il sito oltre la piega, effettuando quindi uno o più scroll verticali.
+I principali difetti sono legati dalla difficoltà nel raggiungere il collegamento per effettuare una richiesta di prenotazione, accessibile solamente tramite la barra di nabigazione o
+tramite il link nascosto dietro il testo dell'ultimo articolo inserito, che nel nostro caso sono le ultime news. Questo è visibile anche dai dati raccolti da google analytics che mostrano come un utente medio
+resti sulla home page poco meno di 2 minuti e abbandona il sito prima di inviare una richiesta di prenotazione. Evidente dal fatto che il link prenota non risulta mai essere cliccato.
 
+\begin{figure}[h!]%
+	\includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/googleAnalyticsDoc1}
+	\centering
+	\caption{Dati Google Analitycs Home Page}%
+	\label{fig:googleHomePage}%
+\end{figure}
+Dall'immagine {fig.\ref{fig:googleHomePage}} postata risulta evidente che la barra di navigazione posta sopra il logo rende difficoltosa all'utente medio comprendere quale sia il vero link alla homePage, si notano alcuni click sullo spazio negativo della
+barra di navigazione (più del 40\% degli utenti).
+Non permette la modifica della grandezzzqa del font, non permettendo una facile navigazione a persone ipovedenti.
 
 \section{Obiettivi generali del nuovo sito}
-16. Obiettivi generali del nuovo sito, loro priorità e tempistica
-17. Obiettivi specifici del nuovo sito, loro priorità e tempistica
-18. Come si potrà verificare a fine progetto il raggiungimento degli obiettivi?
+La nuova versione del sito web dovrà eliminare queste problematiche, invogliando gli utenti ad inviare più richieste di prenotazioni inserendo nella parte ``sopra la piega'' un link
+al forma di prenotazione di prenotazione.
+Per il comparto grafico si è scelta di comprare un tema html dal sito ThemeForest.com, con le funzionalità richieste.
+Il nuovo sito inoltre, nella versione base dovrà fornire le informazioni ad oggi presenti nella versione attuale migliorando la navigabilità spostando la barra di navigazione al di sotto 
+del logo del B\&B.
+\\
+L'home page del sito dovrà restare leggera e non dovrà prevedere nessuna funzionalità in flash, che la renderebbe inaccessibile dai dispositivi mobile.
+L'intento è di fornire sopra la piega tutte le informazioni utili come:
+\begin{itemize}
+ \item collegamento all'home page al click sul logo
+ \item barra di navigazione al di sotto del logo
+ \item slider di immagini
+ \item form per la richiesta di disponibilità
+ \item preview dell'offerta attiva
+\end{itemize}
+
 \section{Utenti}
+Dall'analisi effettuata risultano essere stati individuati tre categorie di utenti:
+\begin{itemize}
+ \item L'amministratore
+ \item L'utente occasionale (utente che raggiunge il sitoweb involontariamente)
+ \item Il cliente (navigatore di internet che effettua una richiesta di prenotazione)
+\end{itemize}
+
+\begin{tabular}[!h]{cm}
+ ×
+\end{tabular}
+
+
 \section{Scenari d'uso}
 \section{Posizionamento competitivo}
 
