doc utente aggiornato 2

--- a/docUtente/VecchiaPosta.tex
+++ b/docUtente/VecchiaPosta.tex
@@ -108,14 +108,25 @@ L'intento è di fornire sopra la piega tutte le informazioni utili come:
 Dall'analisi effettuata risultano essere stati individuati tre categorie di utenti:
 \begin{itemize}
  \item L'amministratore
- \item L'utente occasionale (utente che raggiunge il sitoweb involontariamente)
+ \item L'utente occasionale (utente che raggiunge il sitoweb involontariamente) (aka \textit{Utente})
  \item Il cliente (navigatore di internet che effettua una richiesta di prenotazione)
 \end{itemize}
 
-\begin{tabular}[!h]{cm}
- ×
-\end{tabular}
-
+\begin{center}
+  \begin{tabular}{||m{3cm}||m{4cm}|m{1,5cm}||m{4cm}|m{1,5cm}||}
+    \hline
+      \textbf{Categoria di utenti} & \textbf{Bisogni principali degli utenti in relazione al sito} & Priorità & \textbf{Obiettivi del committente} & Priorità \\
+    \hline
+      Amministratore & mantere aggiornarnate le informazioni presenti sul sito & alta & test & alta\\
+    \hline
+      Utente & reperire le informazioni di contatto, prendere visione della struttura
+	     & alta alta
+	     & &\\
+    \hline  
+      Cliente &  & & &\\
+    \hline
+  \end{tabular}
+\end{center}
 
 \section{Scenari d'uso}
 \section{Posizionamento competitivo}
