--- a/docUtente/VecchiaPosta.tex
+++ b/docUtente/VecchiaPosta.tex
@@ -27,16 +27,15 @@
 %   \end{figure}
 
 \maketitle
+\tableofcontents
 
 %----------------------------------------------------
 \begin{abstract}
 In questo documento verranno descritti nel dettaglio tutti i requisiti funzionali e non funzionali individuati per la realizzazione del sito web del B\&B La Vecchia Posta.
 Per la realizzazione del nuovo sito web sono state utilizzate le informazioni sul traffico dati utilizzando ``google analytics''. Sono stati presi in visione i siti web di altre strutture
 locali e nazionali per rendere la versione 2.0 del sito del B\&B La Vecchia Posta una versione all'avanguardia utilizzando tutte le nuove tecniche del web 2.0.
-\\
-Nella prima parte di questo documento si riporta una descrizione dell'attività del committente ponendo l'attenzione sui dati statici raccolti.
-\\
-Nella seconda parte vengono descritti in maniera puntuale i requisiti funzionali per la realizzazione del nuovo sito web. Come framework di sviluppo verrà utilizzato ``beContent'' tool 
+\par Nella prima parte di questo documento si riporta una descrizione dell'attività del committente ponendo l'attenzione sui dati statici raccolti.
+\par Nella seconda parte vengono descritti in maniera puntuale i requisiti funzionali per la realizzazione del nuovo sito web. Come framework di sviluppo verrà utilizzato ``beContent'' tool 
 sviluppato dall'università dell'Aquila, del quale il sottoscritto è uno sviluppatore.
 \end{abstract}
 
@@ -59,10 +58,10 @@ quindi è sorta la neccessità di aggiornare il sito web attuale.
 
 \section{Situazione attuale}
 Il B\&B La Vecchia Posta risulta essere titolare di un dominio web dall'URL www.vecchiaposta.it, al momento non sono stati previsti alias. 
-\\Il sito web è stato realizzato nel 2010 dalla Fermenti Grafici, web agency aquilana, che a titolo di amicizia ha realizzato
+\par Il sito web è stato realizzato nel 2010 dalla Fermenti Grafici, web agency aquilana, che a titolo di amicizia ha realizzato
 il comparto grafico (logo, foto, template) ed ha fornito gratuitamente e momentaneamente l'hosting.
 Ad oggi il sito web risulta essere completamente gestito dal sottoscritto ed è hostato dalla web farm ARUBA.
-\\Sin dalla sua prima versione il sito web del B\&B è stato realizzato utilizzando WordPress, uno dei più famosi CMS nel mondo del web e sono stati installati alcuni plug-in per fornire al sito alcune funzionalità di cui il committente aveva bisogno.
+\par Sin dalla sua prima versione il sito web del B\&B è stato realizzato utilizzando WordPress, uno dei più famosi CMS nel mondo del web e sono stati installati alcuni plug-in per fornire al sito alcune funzionalità di cui il committente aveva bisogno.
 
 \subsection{Aspetti rilevanti del sito}
 Da interviste effettuate sui clienti del B\&B risulta essere di gradevole impatto il sito, grazie ad una grafica curata minuziosamente.
@@ -93,9 +92,8 @@ al forma di prenotazione di prenotazione.
 Per il comparto grafico si è scelta di comprare un tema html dal sito ThemeForest.com, con le funzionalità richieste.
 Il nuovo sito inoltre, nella versione base dovrà fornire le informazioni ad oggi presenti nella versione attuale migliorando la navigabilità spostando la barra di navigazione al di sotto 
 del logo del B\&B.
-\\
-L'home page del sito dovrà restare leggera e non dovrà prevedere nessuna funzionalità in flash, che la renderebbe inaccessibile dai dispositivi mobile.
-L'intento è di fornire sopra la piega tutte le informazioni utili come:
+\par L'home page del sito dovrà restare leggera e non dovrà prevedere nessuna funzionalità in flash, che la renderebbe inaccessibile dai dispositivi mobile.
+L'intento è di fornire ``\textit{sopra la piega}`` tutte le informazioni utili come:
 \begin{itemize}
  \item collegamento all'home page al click sul logo
  \item barra di navigazione al di sotto del logo
@@ -103,6 +101,16 @@ L'intento è di fornire sopra la piega tutte le informazioni utili come:
  \item form per la richiesta di disponibilità
  \item preview dell'offerta attiva
 \end{itemize}
+\par Inoltre il nuovo sito dovrà essere ''responsive'' garantendo la completa compatibilità con i maggiori device che ad oggi accedono ad internet.
+\\In particolare:
+\begin{itemize}
+ \item 1200px Desktop
+ \item 1024px iPad landscape and netbook
+ \item 768px 7inch tablet
+ \item 368px mobile phone
+\end{itemize}
+Prendendo come risoluzione base 1200px essendo circa il 90\% degli utenti ad utilizzarla \footnote{Fonte \url{http://www.w3schools.com/browsers/browsers_display.asp}}
+ed inoltre facendo attenzione alla compatibilità fra i differenti browser (chrome, firefox, safari, explorer ed opera).
 
 \section{Utenti}
 Dall'analisi effettuata risultano essere stati individuati tre categorie di utenti:
@@ -117,19 +125,50 @@ Dall'analisi effettuata risultano essere stati individuati tre categorie di uten
     \hline
       \textbf{Categoria di utenti} & \textbf{Bisogni principali degli utenti in relazione al sito} & Priorità & \textbf{Obiettivi del committente} & Priorità \\
     \hline
-      Amministratore & mantere aggiornarnate le informazioni presenti sul sito & alta & test & alta\\
+      Amministratore & mantenere aggiornarnate le informazioni presenti sul sito & alta & fornire all'amministratore le informazioni aggiornate da inserire nel sito web & alta\\
     \hline
       Utente & reperire le informazioni di contatto, prendere visione della struttura
-	     & alta alta
-	     & &\\
+	     & alta, alta
+	     & impressionare l'utente casuale invogliando ad effettuare una prenotazione,  & alta\\
     \hline  
-      Cliente &  & & &\\
+      Cliente & reperire informazioni di contatto, visionare il tariffario, effettuare una richiesta di prenotazione & alta, media, alta & mantere ottimi rapporti con
+      il cliente abitudinario, invogliare il ``passaparola'' dei clienti & alta, alta\\
     \hline
   \end{tabular}
 \end{center}
+\subsection{Profilo degli utenti}
+  \begin{itemize}
+   \item \textbf{Cliente}: sono i navigatori di internet che cercando una destinazione per le proprie vacanze si sono imbattuti sul sito web della struttura e hanno la volotà di inviare 
+   una richiesta di disponibilità. Rientrano in questa categoria di utenza anche i clienti ``storici'' del B\&B avendo già soggiornato nella struttura in un'altra occasione.
+   \item \textbf{Utente}: sono i navigatori di internet definiti come i visitatori di rimbalzo, ovvero quegli utenti di internet che non volendo sono giunti sul sito internet del B\&B. 
+   Su questi utenti che il titolare vorrebbe invogliare a fare una richiesta di disponibilità.
+   \end{itemize}
 
 \section{Scenari d'uso}
+\par
+\begin{itemize}
+ \item [Cliente] inserire qui una storia
+ \item [Utente] inserire qui una storia
+\end{itemize}
+
 \section{Posizionamento competitivo}
+Particolare attenzione verrà posta nel posizionamento competitivo il sito web della struttura. Per ottenere un risutlatao di pregio sono stati analizzati i siti web di altre strutture
+locali ma anche di strutture nazionali, delle maggiori località turistiche, per catturare quelle funzionalità che potevano sfuggire ma che risultano essere utili.
+\par I siti web locali analizzati sono stati:
+\begin{itemize}
+ \item B\&B Camaga
+ \item B\&B Oasi nel Vetoio
+ \item B\&B Grace
+\end{itemize}
+mentre per i siti extra-regione sono stati analizzati:
+\begin{itemize}
+ \item Il giglio binaco (Sorrento)
+ \item Soggiorno Pezzati (Firenze)
+ \item Il Melograno (Muro Leccese)
+\end{itemize}
+\par Per il nuovo sito si intende posizionarlo nei primissimi posti dei motori di ricerca (google, bing, yahoo) cercando di migliorare l'inidicizzazione.
+
+
 
 %----------------------------------------------------
 
