--- a/docUtente/VecchiaPosta.tex
+++ b/docUtente/VecchiaPosta.tex
@@ -182,69 +182,74 @@ seguendo le direttive imposte dai motori di ricerca.
 \chapter{Requisiti del sito}
 
 \section{Requisiti di architettura}
-\subsection{Architettura informativa}
-\begin{itemize}
- \item Home
- \begin{itemize}
-  \item Camere
-  \begin{itemize}
-   \item Singola
-   \item Doppia
-   \item Tripla
-   \item Quadrupla
-  \end{itemize}
-  \item Eventi
-  \begin{itemize}
-   \item Perdonanza Celistiniana
-   \item Festa del Cioccolato
-   \item Sagre e Feste
-  \end{itemize}
-  \item Attività
-  \begin{itemize}
-   \item Ippovia del Gran Sassi
-   \item L'anello del Lago di Campotosto
-   \item Da Cagnano al Gran Sasso
-  \end{itemize}
-  \item Dintorni
-  \begin{itemize}
-   \item L'Aquila
-   \item Amatrice
-   \item Parco Nazionale del Gran Sasso
-   \item Lago di Campotosto
-   \item Campo Imperatore
-   \item Campo Felice
-  \end{itemize}
-  \item Dove Siamo
- \end{itemize}
-\end{itemize}
+  \subsection{Architettura informativa}
+    \begin{itemize}
+    \item Home
+      \begin{itemize}
+	\item Camere
+	  \begin{itemize}
+	    \item Singola
+	    \item Doppia
+	    \item Tripla
+	    \item Quadrupla
+	  \end{itemize}
+	\item Eventi
+	  \begin{itemize}
+	    \item Perdonanza Celistiniana
+	    \item Festa del Cioccolato
+	    \item Sagre e Feste
+	  \end{itemize}
+	\item Attività
+	  \begin{itemize}
+	    \item Ippovia del Gran Sassi
+	    \item L'anello del Lago di Campotosto
+	    \item Da Cagnano al Gran Sasso
+	  \end{itemize}
+	\item Dintorni
+	  \begin{itemize}
+	    \item L'Aquila
+	    \item Amatrice
+	    \item Parco Nazionale del Gran Sasso
+	    \item Lago di Campotosto
+	    \item Campo Imperatore
+	    \item Campo Felice
+	  \end{itemize}
+	\item Dove Siamo
+      \end{itemize}
+    \end{itemize}
 
-\subsection{Navigazione}
-Per quanto riguarda la navigazione del sito sarà necessario organizzare una barra di navigazione orizzontale che permetta all'utente di spostarsi facilmente da una sezione di primo livello
-ad un'altra. La barra di navigazione di primo livello si è deciso di posizionarla al di sotto del header, che contiene il logo dell'azienda, la preview dell'offerta attiva. Al di sopra del logo
-si pensa di sistemare i collegamenti alle pagine social, link che vengono utilizzati in minor modo, l'icona per mostrare la mappa velocemente, un pulsante per effettuare una rihciesta di prenotazione
-e i bottoni per la gestione della grandezza dei font.
-\par Per le sezioni di secondo livello si pensa di utilizzare una barra di navigazione verticale per permettere all'utente di spostarsi nelle varie sezioni interne agevolmente senza
-perdersi nei vari link del sito. Il menu di secondo livello verrà posizionato nella sidebar di destra, appena sotto lo slider, suddividendo lo spazio della pagina in un 70\% destinato aqi contenuti
-ed un 30\% destinato al menu di secondo livello.
-\par Si riporta uno schema della gabbia logica per l'homepage del sito. Le altre pagine manterranno una struttura simile all'homepage mantenendo alta la coesione tra contenuti.
-\\Nella fig.\ref{fig:gabbiaLogica} viene riportata la struttura dell'intero sito e non solo della homepage mostrando anche il posizionamento della barra di navigazione di secondo livello ove presente.
-\begin{figure}[h!]%
-	\includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/gabbiaLogica}
-	\centering
-	\caption{Gabbia logica}%
-	\label{fig:gabbiaLogica}%
-\end{figure}
-\newpage
-\section{Requisiti di comunicazione}
-\subsection{Identità di marca, tono e stile della comunicazione}
+  \subsection{Navigazione}
+  Per quanto riguarda la navigazione del sito sarà necessario organizzare una barra di navigazione orizzontale che permetta all'utente di spostarsi facilmente da una sezione di primo livello
+  ad un'altra. La barra di navigazione di primo livello si è deciso di posizionarla al di sotto del header, che contiene il logo dell'azienda, la preview dell'offerta attiva. Al di sopra del logo
+  si pensa di sistemare i collegamenti alle pagine social, link che vengono utilizzati in minor modo, l'icona per mostrare la mappa velocemente, un pulsante per effettuare una rihciesta di prenotazione
+  e i bottoni per la gestione della grandezza dei font.
+  \par Per le sezioni di secondo livello si pensa di utilizzare una barra di navigazione verticale per permettere all'utente di spostarsi nelle varie sezioni interne agevolmente senza
+  perdersi nei vari link del sito. Il menu di secondo livello verrà posizionato nella sidebar di destra, appena sotto lo slider, suddividendo lo spazio della pagina in un 70\% destinato aqi contenuti
+  ed un 30\% destinato al menu di secondo livello.
+  \par Si riporta uno schema della gabbia logica per l'homepage del sito. Le altre pagine manterranno una struttura simile all'homepage mantenendo alta la coesione tra contenuti.
+  \\Nella fig.\ref{fig:gabbiaLogica} viene riportata la struttura dell'intero sito e non solo della homepage mostrando anche il posizionamento della barra di navigazione di secondo livello ove presente.
+  \begin{figure}[h!]%
+    \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/gabbiaLogica}
+    \centering
+    \caption{Gabbia logica}%
+    \label{fig:gabbiaLogica}%
+  \end{figure}
+  \newpage
+  \section{Requisiti di comunicazione}
+  \subsection{Identità di marca, tono e stile della comunicazione}
+  Semplicità, eleganza e calore sono le caratteristiche che il comparto grafico del sito dovrà rispettare essendo le caratteristiche dell'azienda. 
+  Si è scelto una palette di colori che richiami il logo dell'azienda mantenendo uno stile aggraziato che richiami anche i colori della terra. I colori dominanti per il sito
+  sono il verde e il marrone. Nella parte sopra la piega oltre al form per la richiesta di disponibilità si è deciso di insere uno slider in modo da ottenere una homepage
+  stile vetrina, metodo che attualmente è più in voga nei siti internet delle aziende nel campo del turismo. Nella sezione sotto la piega sono stati collocati invece i contenuti multimediali
+  che risultano essere di minore rilevanza al fine di ottenere una richiesta di prenotazione.
 
-\subsection{Grafica e multimedialità}
-Per il comparto grafico si pensato di prendere come risoluizione base del sito i 1200px di larghezza, essendo la risoluizione di maggiore utilizzo\footnote{Dati di \url{www.w3schools.com}}.
-Non sono quindi previsti scroll orizzontali ma solo verticali, mantenendo \textit{sopra la piega} tutte le informazioni principali e le due barre di navigazione, primaria e secondaria. Per mantenere
-il sito al passo con i tempi si è deciso di renderlo anche responsive, prevedendone una versione per smartphone e tablet oltre che per desktop.
-\subsection{Lingua e localizzazione}
-Per lo sviluppo del nuova versione del sito, si è scelto di utilizzare il framework beContent, ciò ci permette in automatico la scelta della lingua preferita dall'utente, potendo eliminare i bottoni per la 
-scelta della lingua del sito. 
+  \subsection{Grafica e multimedialità}
+  Per il comparto grafico si pensato di prendere come risoluizione base del sito i 1200px di larghezza, essendo la risoluizione di maggiore utilizzo\footnote{Dati di \url{www.w3schools.com}}.
+  Non sono quindi previsti scroll orizzontali ma solo verticali, mantenendo \textit{sopra la piega} tutte le informazioni principali e le due barre di navigazione, primaria e secondaria. Per mantenere
+  il sito al passo con i tempi si è deciso di renderlo anche responsive, prevedendone una versione per smartphone e tablet oltre che per desktop.
+  \subsection{Lingua e localizzazione}
+  Per lo sviluppo del nuova versione del sito, si è scelto di utilizzare il framework beContent, ciò ci permette in automatico la scelta della lingua preferita dall'utente, potendo eliminare i bottoni per la 
+  scelta della lingua del sito. 
 
 \section{Requisiti funzionali}
   \subsection{Casi d'uso}
@@ -252,30 +257,31 @@ scelta della lingua del sito.
   riportati sia in forma non dettagliata che dettagliata e che essendo i casi d'uso analizzati nella fase di indagine, potranno subire delle modifiche nelle fasi successive dello sviluppo.
   \begin{itemize}
    \item Amministratore:
-   \begin{enumerate}
-    \item UC1: Inserire contenuti
-    \item UC2: Aggiornare il sistema
-    \item UC3: Mantenere frunzionante il sistema
-   \end{enumerate}
+    \begin{enumerate}
+      \item UC1: Inserire contenuti
+      \item UC2: Aggiornare il sistema
+      \item UC3: Mantenere frunzionante il sistema
+    \end{enumerate}
    \item Cliente: 
-   \begin{enumerate}
-    \item UC4: Visualizzare le informazioni di contatto
-   \end{enumerate}
+    \begin{enumerate}
+      \item UC4: Visualizzare le informazioni di contatto
+    \end{enumerate}
    \item Utente: 
-   \begin{enumerate}
-    \item UC5: Effettuare una richiesta di prenotazione
-   \end{enumerate}
+    \begin{enumerate}
+      \item UC5: Effettuare una richiesta di prenotazione
+    \end{enumerate}
   \end{itemize}
-Si rimanda il lettore all'appendice C per la lettura dei casi d'uso in forma dettagliata.
-\subsection{Base di dati}
-La nuova versione del sito internet, non utilizzerà la vecchia base dati, ma sarà sviluppata una nuova base di dati rispettando le esigenze del nuovo framework di sviluppo.
-\par Nella nuova base di dati verranno memorizzati tutte le informazioni necessarie al funzionamento di beContent, come la password di amministratore e di tutti gli utenti che devono
-interagire con lo stesso (attualmente l'amministratore di sistema è anche il committente quindi un solo utente avrà i diritti per l'accesso nell'area di backend del framework).
-Verranno inoltre memorizzati i contenuti delle pagine interne (testo, link, file multimediali).
+  Si rimanda il lettore all'appendice C per la lettura dei casi d'uso in forma dettagliata.
 
-\subsection{Sicurezza e privacy}
-Nella versione 1.0 del nuovo sito non è previsto il mantenimento delle informazioni dei clienti su database, ma solamente l'invio tramite email dei dati utili alla prenotazione di una camera.
-All'utente sarà comuque richiesto esplicitamente di accettare le codizioni sull'utilizzo dei propri dati in conformità con la normativa art. 13 del d.lgs. 196/2003.
+  \subsection{Base di dati}
+  La nuova versione del sito internet, non utilizzerà la vecchia base dati, ma sarà sviluppata una nuova base di dati rispettando le esigenze del nuovo framework di sviluppo.
+  \par Nella nuova base di dati verranno memorizzati tutte le informazioni necessarie al funzionamento di beContent, come la password di amministratore e di tutti gli utenti che devono
+  interagire con lo stesso (attualmente l'amministratore di sistema è anche il committente quindi un solo utente avrà i diritti per l'accesso nell'area di backend del framework).
+  Verranno inoltre memorizzati i contenuti delle pagine interne (testo, link, file multimediali).
+
+  \subsection{Sicurezza e privacy}
+  Nella versione 1.0 del nuovo sito non è previsto il mantenimento delle informazioni dei clienti su database, ma solamente l'invio tramite email dei dati utili alla prenotazione di una camera.
+  All'utente sarà comuque richiesto esplicitamente di accettare le codizioni sull'utilizzo dei propri dati in conformità con la normativa art. 13 del d.lgs. 196/2003.
 
 \section{Requisiti di contenuto}
 Essendo l'amministratore l'unica figura responsabile ad utilizzare il framework, sarà compito dell'amministratore inserire, modificare ed eliminare i contenuti multimediali del sito.
@@ -284,47 +290,97 @@ Le sezioni in lingua straniera (inglese, spagnolo) saranno redatte dal sottoscri
 dalla figura \ref{fig:googleAnalyticsPaesi} nella sezione ``Appendice B''.
 
 \section{Requisiti di gestione}
+
   \subsection{Infrastruttura per l'esercizio del sito}
-  Si presuppone di hostare il nuovo sito internet su una web-pharm che offra anche servizio SMTP per l'invio di email. Il B\&B La Vecchia Posta risulta essere titolare di un dominio internet \url{www.vecchiaposta.it},
+  Si presuppone di hostare il nuovo sito internet su una web farm che offra anche servizio SMTP per l'invio di email. 
+  Il B\&B La Vecchia Posta risulta essere titolare di un dominio internet \url{www.vecchiaposta.it},
   non si ha la necessità di registrare alias e altri domini, almeno per il momento.
-  \par Il B\&B ha inoltre una casella di posta elettronica utilizzata per la ricezione delle richieste di prenotazioni e per le risposte ai clienti. Risulta utile utilizzare
-  i servizi di Antivirus, AntiSpamm che la web-pharm offre per rendere più confortevole l'utilizzo della mail, eliminando i messaggi indesiderati.
+  \par Il B\&B ha inoltre una casella di posta elettronica utilizzata per la ricezione delle richieste di prenotazioni e per le risposte ai clienti. 
+  Risulta utile utilizzare i servizi di Antivirus, AntiSpamm che la web farm offre per rendere più confortevole l'utilizzo della mail, eliminando i 
+  messaggi indesiderati.
+  
   \subsection{Gestione dei sistemi}
-  Il sitema sarà affidato in outsourcing, ed è stato scelto come gestore esterno la compagnia Aruba, tra le web-pharm più in voga al momento.
+  Il sitema sarà affidato in outsourcing, ed è stato scelto come gestore esterno la compagnia Aruba, tra le web farm più in voga al momento.
   \par Nella fase iniziale non è venuta alla luce l'esigenza di richiedere al gestore caratteristiche particolari del server, l'unica esigenza è stata avere la piattaforma su OS Linux, con tecnologia lampp.
-  Il progettista avrà l'onere di espletare tutte le beghe burocratiche con la web-pharm.
+  Il progettista avrà l'onere di espletare tutte le beghe burocratiche con la web farm.
+  
   \subsection{Gestione del sito}
-  Il sito internet sarà gestito interamente dal sottoscritto, che si occuperà di risolvere eventuali bug e di apportare modifiche successive alla pubblicazione della nuova versione	
+  Il sito internet sarà gestito interamente dal sottoscritto, che assumerà il compito di webmaster del sito e si occuperà di risolvere eventuali bug e 
+  di apportare modifiche successive alla pubblicazione della nuova versione.
+  
   \subsection{Gestione dei contenuti}
   I contenuti multimediali saranno inseriti sempre dal sottoscritto, essendo l'unica figura con i diritti per utilizzare il framework.
   Si riporta una tabella riassuntiva:
   \begin{center}
-    \begin{tabular}{||m{4cm}|m{4cm}|m{4cm}||}
+    \begin{tabular}{||m{6cm}|m{3cm}|m{3cm}||}
       \hline
 	\textbf{Contenuti} & \textbf{Chi li aggiorna} & \textbf{Chi ne autorizza la pubblicazione}\\
       \hline
-	Amministratore & mantenere aggiornarnate le informazioni presenti sul sito & fornire all'amministratore le informazioni aggiornate da inserire nel sito web\\
+	Framework ed i suoi plugin & Amministratore & Amministratore\\
       \hline
-	Utente & reperire le informazioni di contatto, prendere visione della struttura
-	      & impressionare l'utente casuale invogliando ad effettuare una prenotazione\\
+	Immagini e contenuti multimediali & Amministratore & Titolare\\
       \hline  
-	Cliente & reperire informazioni di contatto, visionare il tariffario, effettuare una richiesta di prenotazione & mantere ottimi rapporti con
-	il cliente abitudinario, invogliare il ``passaparola'' dei clienti \\
+	Offerte e News & Amministratore & Titolare \\
       \hline
     \end{tabular}
   \end{center}
+  \par Si fa presente che anche se la figura dell'amministratore e del titolare in questo caso risultano le stesse si è preferito differenziare i compiti nell'ipotesi
+  che le due figure siano ricoperte da persone differenti.
   \subsection{Getione degli utenti}
   Gli utenti comunicheranno con l'azienda tramite posta elettronica, o direttamente o utilizzando l'apposito form presente in tutte le pagine del sito.
-  \par Non sono previsti tempi massimi di attesa per le risposte da parte dell'azienda e sarà compito del gestore gestire le comunicazioni con i clienti della struttura.
+  \par Non sono previsti tempi massimi di attesa per le risposte da parte dell'azienda e sarà compito del titolare gestire le comunicazioni con i clienti della struttura.
 
 \section{Requisiti di accessibilità}
-	\subsection{Prestazioni}
-	\subsection{Reperibilità}
-	\subsection{Compatibilità con i browser}
-	\subsection{Accessibilità da parte di utenti disabili}
+  \subsection{Prestazioni}
+  Non risultano esserci notevoli vincoli prestazionali, si presume di avere un caricamento dell'homepage stimato in 1-2 secondi non imponendo un numero massimo di richieste HTTP.
+  Inoltre di presuppone di utilizzare più chiamate asicrone con il server per ottenere un sito più reattivo. L'unico vincolo che si pone è sul peso delle immagini dello slider che
+  non devono superare i 200kb, questo per ottenere un tempo di scaricamento accettabile.
+  \subsection{Reperibilità}
+  Il sito risulterà essere accessibile solamente tramite l'url \url{www.vecchiaposta.it}, non stati previsti alias ne altri domini di primo livello (es: .en .com .es).
+  \par Ci si è posti l'obiettivo di posizionare il sito web nelle prime posizioni dei risultati di ricerca sui principali portali di ricerca (google, bing, yahoo). Per raggiungere qesto
+  obiettivo si è vincolati a rispettare le regole previste dai motori di ricerca. 
+  \par Le principali azioni che verranno svolte sono quelle legate all'analisi del sito web tramite un browser
+  testuale che ci consentirà di individuare eventuali falle nella struttura del sito. Uno dei principali browser testuali e Lynx, e molti spider dei motori di ricerca indicizzano il sito
+  in base al risultato ottenuto che è molto simile a quello che si ottiene con l'utilizzo di Lynx. 
+  \par Si avrà cura di inserire l'attributo ALT il più descrittivo possibile, aiutando così l'utente con handicap oculare. 
+  \\Si inserirà un titolo esaustivo e indicativo del sito migliorando la presentazione nella preview dei risultati di ricerca. 
+  \par I contenuti del sito saranno curati il più possibile facendo attenzione ad usare parole chiave che risultano essere indici per 
+  un ottimo posizionamento\footnote{Informazioni disponibili al sito \url{https://support.google.com/webmasters/answer/35769}}.
+  
+  \subsection{Compatibilità con i browser}
+  Dal'analisi dei dati raccolti da google analytics si nota che i principali browser che accedono al sito web sono
+  \begin{itemize}
+   \item Chrome
+   \item Internet Explorer
+   \item Firefox
+   \item Safari
+  \end{itemize}
+  risultato che poteva essere immaginato anche senza i risultati di google analytics. L'elenco è stato posto in ordine decrescente.
+  \par Si rimanda alla fig \ref{fig:googleAnalyticsBrowser}, nella sezione Appendice C, per avere una visione più dettagliata dei browser utilizzati.
+  
+  \subsection{Accessibilità da parte di utenti disabili}
+  Nella nuova versione non è prevista l'acquisizione di nessuna certificazione di accessibilità, ma si intende comunque rendere il sito accessibile anche alle
+  persone con qualche handicap
+  Per prima cosa il sito internet sarà dotato di un controllo sulla grandezza del font, utile per le persone ipovedenti. Per le perone che utilizzano browser 
+  vocali si farà attenzione nell'inserire descrizioni dettagliate ed esaustive nell'attributo ALT per rendere il sito usabile.
+  Per quanto riguarda disturbi cromatici è stato effettuato un test tramite il sito \url{http://colorfilter.wickline.org/} che permette di modificare la palette dei colori
+  simulando il risultato agli occhi di un daltonico. Il risultato finale del test è risultato soddisfaciente per i disturbi:
+  \begin{itemize}
+   \item Protanopia: disturbo più frequente legato alla difficoltà di distinguere maggiormente il rosso (\ref{fig:daltonismoProtanopia})
+   \item Deuteranopia: disturbo più frequente legato alla difficoltà di distinguere maggiormente il verde (\ref{fig:daltonismoDeuteranopia})
+   \item Tritanopia: disturbo nel distinguere il colore giallo e il colore blue (\ref{fig:daltonismoTritanopia})
+  \end{itemize}
+  mantenendo quasi inalterato il senso del contrasto voluto. Nell'Appendice D sono riportati gli screenshot dei risultati dei test\footnote{dati raccolti dal'url \url{http://www.treccani.it/enciclopedia}}.
+
 \section{Requisiti di usabilità}
+Per quant riguarda i requisiti di usabilità durante questa prima analisi non stati individuati particolari requisiti, quindi si rimanda a versioni successive. 
+L'obiettivo della nuova versione è di eliminare alcuni problemi legati all'ambiguità della vecchia versione, come ad esempio la barra del menu ed i click nella zona di spazio
+negativo per ritornare alla home. 
+\par Il feedback sarà costituito dai nuovi risultati che google analytics riporterà post pubblicazione della nuova versione. Un altro obietti della nuova versione è quello di 
+ottenere più richieste di prenotazioni inserendo in tutte le pagine una scorciatoia alla pagina di richiesta, cosa che nella versione vecchia non è presente.
 
 \section{Glossario}
+Non sono stati utilizzati particolari termini tali da giustificare la presenza di un glossario.
 
 %----------------------------------------------------
 
@@ -351,7 +407,39 @@ In questa sezione saranno riportate tutte le informazioni recuprate dal servizio
 	\caption{Provenienza degli accessi al sito internet}%
 	\label{fig:googleAnalyticsPaesi}%
 \end{figure}
+\begin{figure}[h!]%
+	\includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/googleAnalyticsBrowser}
+	\centering
+	\caption{Principali browser che accedono al sito}%
+	\label{fig:googleAnalyticsBrowser}%
+\end{figure}
 \newpage
 \section{Appendice C}
 Appendice dei casi d'uso
+\section{Appendice D}
+Gli screenshot riportati sono stati prelevati dal risultato ottenuto dall'analisi effettuata tramite il servizio offerto dal sito \url{http://colorfilter.wickline.org/}. 
+\par La mancanza delle immagini è dovuta dal fatto che il servizio non è riuscito ad analizzare i file di immagine presenti nello slider. Si fa inoltre presente che è stato 
+analizzato il template del tema e non la versione finale.
+\begin{figure}[h!]%
+  \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/daltonismoProtanopia}
+  \centering
+  \caption{Daltonismo: protanopia}%
+  \label{fig:daltonismoProtanopia}%
+\end{figure}
+
+\begin{figure}[h!]%
+  \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/daltonismoDeuteranopia}
+  \centering
+  \caption{Daltonismo: deuteranopia}%
+  \label{fig:daltonismoDeuteranopia}%
+\end{figure}
+
+\begin{figure}[h!]%
+  \includegraphics[width=0.95\textwidth,keepaspectratio=true]{img/daltonismoTritanopia}
+  \centering
+  \caption{Daltonismo: tritanopia}%
+  \label{fig:daltonismoTritanopia}%
+\end{figure}
+Come si può notare dagli screenshot l'effetto di contrasto è comunque mantenuto non portando gravi anomalie che renderebbero il sito non navigabile da daltonici. 
+Sono state analizzate solamente le tre più comuni forme di daltonismo e soprattutto quelle legate maggiormente ai colori scelte nel tema.
 \end{document}
